<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ This file is part of the UNES Open Source Project.
  ~ UNES is licensed under the GNU GPLv3.
  ~
  ~ Copyright (c) 2020. João Paulo Sena <joaopaulo761@gmail.com>
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:animateLayoutChanges="true">

                <com.forcetower.core.widget.FixedDimensionImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:foreground="@drawable/mid_grey_ripple"
                    android:transitionName="@string/transition_event_image"
                    android:minHeight="@dimen/event_collapsed_app_bar_height"
                    android:importantForAccessibility="no"
                    android:scaleType="centerCrop"
                    android:background="@drawable/surface_contrast"
                    app:heightDimension="3"
                    app:widthDimension="4"
                    tools:targetApi="m" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="16dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/event_name"
                        android:singleLine="true"
                        android:inputType="textAutoCorrect|textAutoComplete|textCapSentences"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="8dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/event_location"
                        android:singleLine="true"
                        android:inputType="textAutoCorrect|textAutoComplete"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="8dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/event_description"
                        android:singleLine="false"
                        android:inputType="textAutoCorrect|textAutoComplete|textCapSentences|textMultiLine|textLongMessage"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_start_time"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:singleLine="true"
                        android:focusableInTouchMode="false"
                        android:textColor="?attr/colorOnSurface"
                        android:hint="@string/event_start"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_end_time"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:singleLine="true"
                        android:focusableInTouchMode="false"
                        android:textColor="?attr/colorOnSurface"
                        android:hint="@string/event_end"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="8dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_offered_by"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/event_organization"
                        android:singleLine="true"
                        android:inputType="textAutoCorrect|textAutoComplete|textCapSentences"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/check_free"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/event_check_free"
                    android:checked="true"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:visibility="gone">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/event_price"
                        android:singleLine="true"
                        android:inputType="numberDecimal"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/check_certificate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/event_check_certificate"
                    android:checked="true"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_certificate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_certificate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/event_certificate"
                        android:singleLine="true"
                        android:inputType="numberDecimal"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/check_open_for_all"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/event_check_open_for_all"
                    android:checked="true"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_course"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:visibility="gone">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_course"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:textColor="?attr/colorOnSurface"
                        android:hint="@string/event_course"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/check_register_page"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/event_check_has_register_page"
                    android:checked="true"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_register_page"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:visibility="visible">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_register_page"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/event_register_page"
                        android:singleLine="true"
                        android:inputType="textWebEditText|textUri"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_complete"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="24dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:textAllCaps="false"
                    android:text="@string/event_create_preview"/>

            </LinearLayout>

            <FrameLayout
                android:id="@+id/back_wrapper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:elevation="@dimen/z_fab_over_touchable_app_bar"
                app:paddingTopSystemWindowInsets="@{true}">

                <ImageButton
                    android:id="@+id/back"
                    android:layout_width="?android:actionBarSize"
                    android:layout_height="?android:actionBarSize"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:contentDescription="@string/back_button"
                    android:tint="@android:color/white"
                    android:src="@drawable/ic_arrow_back_black_24dp"
                    android:background="@drawable/mid_grey_ripple"
                    tools:tint="?attr/colorOnSurface"/>
            </FrameLayout>
        </FrameLayout>

    </androidx.core.widget.NestedScrollView>
</layout>