<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ This file is part of the UNES Open Source Project.
  ~ UNES is licensed under the GNU GPLv3.
  ~
  ~ Copyright (c) 2020. João Paulo Sena <joaopaulo761@gmail.com>
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="isEmpty"
            type="Boolean" />
    </data>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/background"
            app:liftOnScroll="true"
            style="@style/Widget.MaterialComponents.AppBarLayout.Surface">
            <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/general_events" />
        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="56dp"
            android:layout_marginHorizontal="32dp"
            android:gravity="center_horizontal"
            android:textAppearance="?android:textAppearanceMedium"
            android:drawableTop="@drawable/no_items_found_204"
            android:drawablePadding="16dp"
            android:text="@string/no_events_created"
            app:goneUnless="@{isEmpty}"
            tools:targetApi="o"
            tools:visibility="visible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_events"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="64dp"
            android:clipToPadding="false"
            app:goneIf="@{isEmpty}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/btn_create_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/create_new_event"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:layout_gravity="bottom|end"
            app:backgroundTint="?attr/colorAccent"
            app:icon="@drawable/ic_add_black_24dp" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>